# Hydra

./: .gitignore  LICENSE  README.md  README_CN.md  hydra.py
hydra_mcp/: README.md  __init__.py  pyproject.toml  server.py  tools.py
skill/hydra/: SKILL.md
