[project]
name = "hydra-mcp"
version = "0.1.0"
description = "Hydra MCP Server - Multi-Agent Orchestration for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
hydra-mcp = "hydra_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
